Changes for initial release

--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -18,7 +18,7 @@ master_log   kalman_watch_master.log                  # Composite master log (cr
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-alert       aldcroft@head.cfa.harvard.edu
+alert       aca@head.cfa.harvard.edu
 
 # Define task parameters
 #  cron: Job repetition specification ala crontab
@@ -35,7 +35,7 @@ alert       aldcroft@head.cfa.harvard.edu
 <task kalman_watch>
       cron * * * * *
       check_cron * * * * *
-      exec kalman_watch.py --outdir $ENV{SKA_DATA}/kalman_watch
+      exec kalman_watch.py --outdir=$ENV{SKA_DATA}/kalman_watch
       exec /bin/cp $ENV{SKA_DATA}/kalman_watch/*.png /data/mta4/www/ASPECT/kalman_watch/
       exec /bin/cp $ENV{SKA_DATA}/kalman_watch/index.html /data/mta4/www/ASPECT/kalman_watch/
       context 1
