Add long-duration flag and code to issue warnings for long-duration events

--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -43,7 +43,9 @@ alert       aca@head.cfa.harvard.edu
         <error>
           #    File           Expression
           #  ----------      ---------------------------
-	     kalman_watch.log     failed
+	     kalman_watch.log     error
+	     kalman_watch.log     fail
+	     kalman_watch.log     warn
         </error>
       </check>
 </task>
