--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -18,7 +18,7 @@ master_log   kalman_watch_master.log                  # Composite master log (cr
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-alert       aca@head.cfa.harvard.edu, emartin@ipa.harvard.edu, aarvai@ipa.harvard.edu
+alert       aca@head.cfa.harvard.edu, emartin@ipa.harvard.edu
 
 # Define task parameters
 #  cron: Job repetition specification ala crontab
