Write data to $SKA/data/kalman_watch3

--- a/kalman_watch/task_schedule.cfg
+++ b/kalman_watch/task_schedule.cfg
@@ -35,8 +35,8 @@ alert taldcroft@cfa.harvard.edu
 <task kalman_watch>
       cron * * * * *
       check_cron * * * * *
-      exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3
-      exec kalman_watch_kalman_perigee_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3 --email=taldcroft@cfa.harvard.edu
+      exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/data/kalman_watch3
+      exec kalman_watch_kalman_perigee_mon --data-dir=$ENV{SKA}/data/kalman_watch3 --email=taldcroft@cfa.harvard.edu
       <check>
         <error>
           #    File           Expression
