Fix task schedule

--- a/kalman_watch/task_schedule.cfg
+++ b/kalman_watch/task_schedule.cfg
@@ -17,7 +17,7 @@ master_log   kalman_watch_master.log                  # Composite master log (cr
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-alert       aca_alert@head.cfa.harvard.edu
+alert       aca@cfa.harvard.edu
 
 # Define task parameters
 #  cron: Job repetition specification ala crontab
@@ -34,8 +34,8 @@ alert       aca_alert@head.cfa.harvard.edu
 <task kalman_watch>
       cron * * * * *
       check_cron * * * * *
-      exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/data/kalman_watch3
-      exec kalman_watch_kalman_perigee_mon --data-dir=$ENV{SKA}/data/kalman_watch3 --email=taldcroft@cfa.harvard.edu
+      exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3
+      exec kalman_watch_kalman_perigee_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3 --email=aca_alert@cfa.harvard.edu --make-html
       <check>
         <error>
           #    File           Expression
