--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
     - master
+  release:
+    types:
+    - created
   repository_dispatch:
     types:
       - conda-build
