--- a/kalman_watch/task_schedule.cfg
+++ b/kalman_watch/task_schedule.cfg
@@ -36,6 +36,7 @@ alert       aca@cfa.harvard.edu
       check_cron * * * * *
       exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3
       exec kalman_watch_kalman_perigee_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3 --email=aca_alert\@cfa.harvard.edu --make-html
+      exec kalman_watch_monitor_win_perigee --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3
       <check>
         <error>
           #    File           Expression
