in kalman_watch_monitor_win_perigee, set default output name using start/stop and allow saving to png

--- a/kalman_watch/task_schedule.cfg
+++ b/kalman_watch/task_schedule.cfg
@@ -35,9 +35,9 @@ alert       aca@cfa.harvard.edu
       cron * * * * *
       check_cron * * * * *
       exec kalman_watch_kalman_perigee_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3 --email=aca_alert\@cfa.harvard.edu --make-html
-      exec kalman_watch_monitor_win_perigee --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3
+      exec kalman_watch_monitor_win_perigee --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3 --out-file=kalman_plot.html
       # this one is last because it uses output from the previous two
-      exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3
+      exec kalman_watch_low_kalman_mon --data-dir=$ENV{SKA}/www/ASPECT/kalman_watch3 --in-file=kalman_plot.html
       <check>
         <error>
           #    File           Expression
